apps/argocd/create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    argoccd.argoproj.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"

---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    argoccd.argoproj.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
